--- a/client/src/components/gigCard/GigCard.scss
+++ b/client/src/components/gigCard/GigCard.scss
@@ -1,48 +1,48 @@
-.gigCard{
+.gigCard {
     width: 324px;
     height: 370px;
-    border: 1px solid rgb(239,238,238);
+    border: 1px solid rgb(239, 238, 238);
     margin-bottom: 25px;
 
-    img{
+    img {
         width: 100%;
         height: 50%;
         object-fit: cover;
     }
 
-    .info{
+    .info {
         padding: 10px 20px;
         display: flex;
         flex-direction: column;
         gap: 5px;
 
-        .user{
+        .user {
             display: flex;
             align-items: center;
             gap: 10px;
 
-            img{
+            img {
                 width: 26px;
                 height: 26px;
                 border-radius: 50%;
             }
         }
 
-        p{
+        p {
             color: #111;
         }
 
-        .star{
+        .star {
             display: flex;
             align-items: center;
             gap: 5px;
 
-            img{
+            img {
                 width: 14px;
                 height: 14px;
             }
 
-            span{
+            span {
                 font-size: 14px;
                 font-weight: bold;
                 color: #ffc108;
@@ -50,33 +50,40 @@
         }
     }
 
-    hr{
+    hr {
         height: 0;
-        border: 0.5px solid rgb(239,238,238);
+        border: 0.5px solid rgb(228, 228, 228);
     }
-    
-    .details{
+
+    .detail {
         padding: 10px 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
-        img{
+        img {
             width: 16px;
             height: 16px;
             cursor: pointer;
+            object-fit: cover;
         }
 
-        .price{
-            span{
+        .price {
+            span {
                 color: #999;
                 font-size: 12px;
             }
 
-            h2{
+            h2 {
                 color: #555;
                 font-size: 18px;
                 font-weight: 400;
+                text-align: end;
+            }
+
+            sup {
+                font-size: 12px;
+                font-weight: 300;
             }
         }
     }
